--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Dhun | Create and Share Music</title>
     <link rel="icon" type="image/png" sizes="any" href="images/favicon.png" />
     <link rel="stylesheet" href="styles/main.css" />
-    <meta name="theme-color" content="#1f2937" />
   </head>
   <body>
     <header id="top-header">
@@ -98,7 +97,7 @@
       <article id="signup-guide">
         <div>
           <h3>We want you! Come join us!</h3>
-          <p>Sign Up to get started on your wonderfull journey in Gaana !</p>
+          <p>Sign Up to get started on your wonderful journey in Gaana!</p>
         </div>
         <button>Sign Up</button>
       </article>
