fix: website no longer displays whitespace on right edge

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             or experience. Your music is your story.
           </p>
           <button>Sign Up</button>
+          <a href="#info"
+            ><button id="scroll-box">Scroll Down to Learn More</button></a
+          >
         </article>
         <figure id="hero-image">
           <img
