refactor:  remove buttons inside anchor links

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
             or experience. Your music is your story.
           </p>
           <button>Sign Up</button>
-          <a href="#info"
-            ><button id="scroll-box">Scroll Down to Learn More</button></a
-          >
+          <a href="#info" id="scrollbox">Scroll Down to Learn More</a>
         </article>
         <figure id="hero-image">
           <img
