fix: spelling and margins

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <article id="signup-guide">
         <div>
           <h3>We want you! Come join us!</h3>
-          <p>Sign Up to get started on your wonderful journey in Gaana!</p>
+          <p>Sign Up to get started on your wonderful journey in Dhun!</p>
         </div>
         <button>Sign Up</button>
       </article>
